Corrected layout issues with form

--- a/src/Styles/SASS/App.sass
+++ b/src/Styles/SASS/App.sass
@@ -1,26 +1,25 @@
-form
-    margin-left: 5vw
-    display: flex
-    flex-direction: column
-
 .calculatorBody
     display: flex
 
-input
-    width: 15vw
-    padding: 10px
+form
+    padding: 1vw
+    margin-left: 2vw
+    display: flex
+    flex-direction: column
+    width: 50vw
 
-button
-    width: 10vw
-    margin: 10px
+    input
+        padding: 10px
+
+    button
+        width: 10vw
+        margin: 10px
 
 .radioButtonList
     display: flex
-    justify-content: flex-start
-    width: 35vw
 
     & div
-        width: 7vw
+        flex-grow: 1
         display: flex
         flex-direction: column
         align-items: center
@@ -28,10 +27,13 @@ button
     & input
         padding: 0
 
-.currSign:before
-    content: '$'
-
 .results
+    width: 40vw
     display: flex
     flex-direction: column
     border: 1px solid black
+    padding: 1vw
+    margin: 2vw
+    background: lightgrey
+    font-size: 2em
+    border-radius: 10px
